--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,4 +12,4 @@ jobs:
     - name: Run a one-line script
       run: echo Hello, world!
     - name: Run a multi-line script
-      run: cd build && cmake .. && make clean && make && test/romanConverter
+      run: mkdir build && cd build && cmake .. && make && test/romanConverter
